# algoth

./: .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  dbg  run  scan
src/: CMakeLists.txt
src/0/: CMakeLists.txt
src/1/: 1.c  CMakeLists.txt  README.md
